--- a/contract-list-client/src/main/resources/contract-list-view.fxml
+++ b/contract-list-client/src/main/resources/contract-list-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
@@ -7,14 +8,19 @@
    <MenuBar prefHeight="0.0" prefWidth="602.0">
       <Menu mnemonicParsing="false" text="File">
          <MenuItem mnemonicParsing="false" onAction="#onRefresh" text="Refresh" />
+         <MenuItem mnemonicParsing="false" onAction="#onExit" text="Exit" />
       </Menu>
    </MenuBar>
-   <TableView fx:id="contractTable" focusTraversable="false" nodeOrientation="LEFT_TO_RIGHT">
+   <TableView fx:id="contractTable" focusTraversable="false" nodeOrientation="LEFT_TO_RIGHT" VBox.vgrow="ALWAYS">
       <columns>
-         <TableColumn fx:id="idColumn" editable="false" prefWidth="54.0" text="ID" />
+         <TableColumn fx:id="idColumn" editable="false" prefWidth="55.0" text="ID" />
          <TableColumn fx:id="dateColumn" editable="false" prefWidth="170.0" text="DATE" />
-         <TableColumn fx:id="numberColumn" editable="false" prefWidth="124.0" text="NUMBER" />
-         <TableColumn fx:id="updateColumn" editable="false" prefWidth="174.0" text="LAST UPDATE" />
-         <TableColumn fx:id="relevanceColumn" editable="false" text="RELEVANCE" />
-      </columns></TableView>
+         <TableColumn fx:id="numberColumn" editable="false" prefWidth="125.0" text="NUMBER" />
+         <TableColumn fx:id="updateColumn" editable="false" prefWidth="170.0" text="LAST UPDATE" />
+         <TableColumn fx:id="relevanceColumn" editable="false" prefWidth="75.0" text="RELEVANCE" />
+      </columns>
+      <VBox.margin>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      </VBox.margin>
+   </TableView>
 </VBox>
